--- a/01_사전학습.md
+++ b/01_사전학습.md
@@ -13,11 +13,15 @@
 4. 훈련
 5. 결과 확인
 
+## 훈련 데이터 준비
 
+- [Harry Potter Books](https://www.kaggle.com/datasets/shubhammaindola/harry-potter-books)
+  
+<img width="785" height="551" alt="image" src="https://github.com/user-attachments/assets/813c0479-556f-4df4-9082-6f1a3646720f" />
 
+- ipynb 파일과 동일한 위치에 훈련 데이터 세팅
 
-
-
+<img width="489" height="115" alt="image" src="https://github.com/user-attachments/assets/6b60219f-e535-40fc-90e5-6b79a8dbad01" />
 
 
 
